test/bad/modules/use02.px

use math hiding sin

sin(0)
